Feat [10장 한 주간의 목표 세우기] 한줄평 생성 및 조회
